--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,7 +14,8 @@ pricebasket {
   ]
 
   offers = [
-    { type = "percentage-per-item", product = "Apples", pct = 0.10, label = "Apples 10% off" },
+    { type = "percentage-per-item", product = "Apples", pct = 0.10, label = "Apples 10% off",
+      startDate = "2025-08-18", endDate = "2025-08-25" },
     { type = "linked-multibuy", requiredProduct = "Soup", requiredQty = 2,
       discountedProduct = "Bread", discountPct = 0.50, label = "Bread 50% off (with 2 Soup)" }
   ]
